<resources>
    <string name="app_name">Wedding Plan</string>
    <string name="notification_message">"New announcement from Tania Tarun"</string>
    <string name="toast_refresh">Refreshing Data</string>
    <string name="message_token_format" translatable="false">InstanceID Token: %s</string>
    <string name="title_activity_settings">Settings</string>
    <string name="author_name">Tania Tarun</string>

    <!-- Labels -->
    <string name="settings_label">Settings</string>
    <string name="gallery_label">Gallery</string>
    <string name="pref_night_mode_label">Night Mode</string>
    <string name="pref_app_theme_label">Change Theme</string>

    <string name="invite">Invite</string>
    <string name="about">About Us</string>

    <!-- Dialog's -->
    <string name="pref_dialog_title">Click to choose a theme</string>
    <!-- Summaries -->
    <string name="pref_theme_summary">To see the effect navigate back</string>

    <string name="pref_theme_key">pref_theme</string>

    <!-- Summary for night mode -->
    <string name="night_mode_key" translatable="false">Night Mode</string>
    <string name="night_mode_on">Enabled</string>
    <string name="night_mode_off">Disabled</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_notification_key" translatable="false">Notification</string>


    <string name="pref_theme_default">AppTheme</string>

    <string name="pref_color_red_label">Red</string>
    <string name="pref_color_pink_label">Pink</string>
    <string name="pref_color_dark_pink_label">Dark Pink</string>
    <string name="pref_color_violet_label">Violet</string>
    <string name="pref_color_blue_label">Blue</string>
    <string name="pref_color_sky_blue_label">Sky blue</string>
    <string name="pref_color_green_label">Green</string>
    <string name="pref_color_grey_label">Grey</string>
    <string name="pref_color_brown_label">Brown</string>

    <string name="pref_color_red_value" translatable="false">red</string>
    <string name="pref_color_pink_value" translatable="false">pink</string>
    <string name="pref_color_dark_pink_value" translatable="false">dark_pink</string>
    <string name="pref_color_violet_value" translatable="false">violet</string>
    <string name="pref_color_blue_value" translatable="false">blue</string>
    <string name="pref_color_sky_blue_value" translatable="false">sky_blue</string>
    <string name="pref_color_green_value" translatable="false">green</string>
    <string name="pref_color_grey_value" translatable="false">grey</string>
    <string name="pref_color_brown_value" translatable="false">brown</string>

    <string name="play_again">Play Again</string>
    <string name="maybe_later">Maybe Later</string>

    <string name="puzzle_label">Puzzle</string>
    <string name="invitation_title">Join the Wedding Plan</string>
    <string name="invitation_message">Please visit the link to download our app.</string>
    <string name="invitation_deep_link">https://weddingplan.page.link/welcome</string>
    <string name="invitation_cta">Instal·lar</string>
    <string name="notification_label">Notifications</string>
    <string name="tania_tarun">Tania Tarun</string>
    <string name="date">28/04/1998</string>
    <string name="join_wedding_label">Join the Wedding</string>
    <string name="get_started_label">Get Started</string>
    <string name="welcome_label">Welcome to Wedding</string>
    <string name="upload_label">Upload</string>
    <string name="enter_file_label">Enter file name</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="no_file_selected">No File selected</string>
    <string name="upload_successful">Upload successful</string>
    <string name="upload_in_progress">Upload in progress</string>
    <string name="configure">Configure</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_header">All Announcements</string>

</resources>
